Add basic structure and style to page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
         <link rel="stylesheet" href="/style.css">
     </head>
     <body>
-        Placeholder text.
+        <div class="img">
+            <div class="txt-banner">
+            <div>Sign Up Today</div>
+            </div>
+            <div class="credit">
+            Photo by <a class="creditlink" href="https://unsplash.com/@sepoys?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rohit Tandon</a> 
+            on <a class="creditlink" href="https://unsplash.com/s/photos/mountains?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </div>
+        </div>
+        <div class="form-main">
+            <div class="top-section">
+                <div class="txt-container-01">
+                This is not a real online service! You know you need something like 
+                this in your life to help you realise your deepest dreams. Sign up now to get started.
+                </div>
+                <div class="txt-container-02">
+                You <em>know</em> you want to.
+                </div>
+            </div>
+            <div class="mid-section">
+                <div class="title">Let's do this</div>
+                <div class="form">
+                    FIRST name
+                    LAST name
+                    EMAIL
+                    PHONE NUMBER
+                    PASSWORD
+                    CONFIRM PASSWORD
+                </div>
+            </div>
+            <div class="bot-section">
+                <button>Create Account</button>
+                <div>Already have an account? <a>Log in</a></div>
+            </div>
+        </div>
     </body>
 </html>
