--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 </div>
             </div>
             <div class="bot-section">
-                <button>Create Account</button>
-                <div>Already have an account? <a>Log in</a></div>
+                <button href="signup.html" class="create-acct">Create Account</button>
+                <div>Already have an account? <a href="login.html" class="log-in">Log in</a></div>
             </div>
         </div>
     </body>
