Style change and add form

--- a/index.html
+++ b/index.html
@@ -28,14 +28,40 @@
                 </div>
             </div>
             <div class="mid-section">
-                <div class="title">Let's do this</div>
-                <div class="form">
-                    FIRST name
-                    LAST name
-                    EMAIL
-                    PHONE NUMBER
-                    PASSWORD
-                    CONFIRM PASSWORD
+                <div class="title">Let's do this!</div>
+                <div class="form-container">
+                    <div class="form-col-1">
+                        <form class="form-input">
+                            <div class="input-label-container">
+                                <label for="firstname">FIRST NAME</label>
+                                <input type="text" id="firstname" name="firstname">
+                            </div>
+                            <div class="input-label-container">
+                                <label for="lastname">LAST NAME</label>
+                                <input type="text" id="lastname" name="lastname">
+                            </div>
+                            <div class="input-label-container">
+                                <label for="password">PASSWORD</label>
+                                <input type="password" id="password" name="password">
+                            </div>
+                          </form>
+                    </div>
+                    <div class="form-col-2">
+                        <form class="form-input">
+                            <div class="input-label-container">
+                                <label for="lastname">LAST NAME</label>
+                                <input type="text" id="lastname" name="lastname">
+                            </div>
+                            <div class="input-label-container">
+                                <label for="phone">PHONE NUMBER</label>
+                                <input type="tel" id="phone" name="phone">
+                            </div>
+                            <div class="input-label-container">
+                                <label for="password">CONFIRM PASSWORD</label>
+                                <input type="password" id="password-conf" name="password-conf">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
             <div class="bot-section">
