--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             </div>
             <div class="mid-section">
                 <div class="title">Let's do this!</div>
-                <div class="form-container">
-                    <div class="form-col-1">
-                        <form class="form-input">
+                    <form class="form-input">
+                        <div class="form-container-all">
+                        <div class="form-container-content">
+                        <div class="form-col-1">
                             <div class="input-label-container">
                                 <label for="firstname">FIRST NAME</label>
                                 <input type="text" id="firstname" name="firstname" required>
@@ -44,28 +45,27 @@
                                 <label for="password">PASSWORD</label>
                                 <input type="password" id="password" name="password" required>
                             </div>
-                          </form>
-                    </div>
-                    <div class="form-col-2">
-                        <form class="form-input">
+                        </div>
+                        <div class="form-col-2">
                             <div class="input-label-container">
                                 <label for="lastname">LAST NAME</label>
                                 <input type="text" id="lastname" name="lastname" required>
                             </div>
                             <div class="input-label-container">
                                 <label for="phone">PHONE NUMBER</label>
-                                <input type="tel" id="phone" name="phone" required minlength="9" maxlength="9">
+                                <input type="tel" id="phone" name="phone" required minlength="10" maxlength="10">
                             </div>
                             <div class="input-label-container">
                                 <label for="password">CONFIRM PASSWORD</label>
                                 <input type="password" id="password-conf" name="password-conf" required>
                             </div>
-                        </form>
-                    </div>
-                </div>
+                        </div>
+                        </div>
+                            <div><button class="create-acct" type="submit">Create Account</button></div>
+                        </div>
+                    </form>    
             </div>
             <div class="bot-section">
-                <div><button class="create-acct" type="submit">Create Account</button></div>
                 <div>Already have an account? <a href="" class="log-in">Log in</a></div>
             </div>
         </div>
